Changed "bye nerd" to "See You Soon"

--- a/SouthHollow/assets/minecraft/lang/en_us.json
+++ b/SouthHollow/assets/minecraft/lang/en_us.json
@@ -1,6 +1,6 @@
 {
     "menu.returnToGame":"§aReturn to SouthHollow",
-    "menu.disconnect":"§cBye Nerd",
+    "menu.disconnect":"§cSee You Soon",
     "menu.game":"섏⻔섐",
     "multiplayer.downloadingTerrain":"",
     "item.dyed":"§8CUSTOM ITEM",
