--- a/SouthHollow/assets/minecraft/lang/en_us.json
+++ b/SouthHollow/assets/minecraft/lang/en_us.json
@@ -4,5 +4,6 @@
     "menu.game":"섏⻔섐",
     "multiplayer.downloadingTerrain":"",
     "item.dyed":"§8CUSTOM ITEM",
+    "mount.onboard":"§7Press §rꢕ §7To Exit",
     "container.inventory":"",
     "connect.joining":""}
