Updated HideAndSeek Map Previews
Gustavo wanted his images to be in game. This makes sense as we'll
likely be using his images in promotional materials.

--- a/SouthHollow/assets/minecraft/lang/en_us.json
+++ b/SouthHollow/assets/minecraft/lang/en_us.json
@@ -7,6 +7,11 @@
     "container.inventory":"",
     "commands.save.saving": "§c» §7Saving game data...",
     "commands.save.success": "§c» §aSaved the game!",
+    "chat.type.announcement": "§8[§3§l%s§8] §7%s",
+    "chat.type.admin": "§8[§3§l%s§8] §7%s",
+    "chat.type.advancement.task": "§3%s §7has made the advancement §3%s",
+    "chat.type.advancement.challenge": "§3%s §7has completed the challenge §3%s",
+    "chat.type.advancement.goal": "§3%s §7has reached the goal §3%s",
     "resourcePack.title": "Select Resource Packs",
     "resourcePack.server.name": "§aSouthHollow Custom Content",
     "debug.prefix": "§c»",
