Improved how custom images are displayed plus reduced file sizes

--- a/SouthHollow/assets/minecraft/lang/en_us.json
+++ b/SouthHollow/assets/minecraft/lang/en_us.json
@@ -1,6 +1,6 @@
 {
     "menu.returnToGame":"§7» §aReturn to SouthHollow §7«",
-    "menu.game":"섏⻔섐",
+    "menu.game":"\u0C19",
     "multiplayer.downloadingTerrain":"",
     "mount.onboard":"§7Press §rꢕ §7To Exit",
     "container.inventory":"",
